[package]
name = "csd-swarm"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Compute Substrate content swarm — self-certifying replication overlay for on-chain payload_hash content (L1)."
repository = "https://github.com/InverseAltruism/csd-swarm"

[[bin]]
name = "csd-swarm"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync", "fs", "signal"] }
axum = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
libp2p = { version = "0.54", features = ["tokio", "tcp", "noise", "yamux", "gossipsub", "request-response", "cbor", "identify", "ping", "macros"] }

[profile.release]
opt-level = 2

[dev-dependencies]
tempfile = "3"
